force-app/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>