force-app/main/default/objects/Project__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <label>Git Repository</label>
    <type>Url</type>
</CustomField>