force-app/main/default/objects/Project__c/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <formula>TEXT(Account__r.Industry)</formula>
    <label>Industry Vertical</label>
    <type>Text</type>
</CustomField>