force-app/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>