force-app/main/default/objects/Project__c/fields/Total_In_Progress_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Progress_Tasks__c</fullName>
    <description>I was assigned this Task out of protest for the Git Project.</description>
    <label>Total In Progress Tasks</label>
    <summaryFilterItems>
        <field>Project_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>